--- a/back-jukebox/nginx/conf.d/default.conf
+++ b/back-jukebox/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
   listen 0.0.0.0:80;
   index index.php;
-  root /var/www/public;
+  root /var/www;
 
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options "nosniff";
