--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
     volumes:
       - .:/var/www
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./back-jukebox/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - internal-network
   app:
